// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllPlacements 1`] = `
<div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      top
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      bottom
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      left
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      right
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      top-start
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      top-end
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      bottom-start
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      bottom-end
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      left-start
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      left-end
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      right-start
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
    >
      right-end
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > CloseDelay 1`] = `
<div>
  <span
    class="cursor-pointer"
  >
    3000 ms close delay
  </span>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <span
    class="cursor-pointer"
  >
    hover me
  </span>
</div>
`;

exports[`Story Snapshots > Delay 1`] = `
<div>
  <span
    class="cursor-pointer"
  >
    1000 ms delay
  </span>
</div>
`;
